2005-09-05 Stuart Prescott <s.prescott@unimelb.edu.au>
	* bugfix: viewing consumable usage not updated to new deletion framework

2005-09-05 Stuart Prescott <s.prescott@unimelb.edu.au>
	* 1.0.0 release

2005-08-25 Stuart Prescott <s.prescott@unimelb.edu.au>
	* tagged as 0.9.9.4-1.0rc4 
	* help system on sf.net activated
	* allowed user-specified path to mysqldump + options 
	* deletion of objects no longer deletes from database instead uses deleted flag 

2005-08-12 Stuart Prescott <s.prescott@unimelb.edu.au>
	* Fix calendar display so that out-of-slot bookings made by admin don't break grid pattern 
	* Fix booking validation so that non-admin users can make bookings that start or stop at non-slot times if those times but up against another out-of-slot booking 
	* Change CSS to reduce problems of half-hour table cells being given zero-height and rounded back to previous hour 
	* include location of instruments in the view instrument list 

2005-07-06 Stuart Prescott <s.prescott@unimelb.edu.au>
	* 0.9.9.2-1.0rc3
	* bugfix: max days in future settings on calendar and day views now do as intended 
	* feature: max days in future now enforced on calendars not just optional, admin override 
	* bugfix: time handling now correct for times less than one hour (SimpleDate/Time -> TimeSlotRule) 
	* bugfix: overnight bookings now appear at end of day and beginning of next day on calendar view (change order of booking normalisation to do TimeSlotsRule first then BreakByDay) 
	* feature: make subscribe-announce on by default in the forms 

2005-07-01 Stuart Prescott <s.prescott@unimelb.edu.au>
	* 0.9.9.1-1.0rc2
	* enabled a maximum number of days into the future that calendars are displayed for 

2005-06-29 Stuart Prescott <s.prescott@unimelb.edu.au>
	* change email functions to use the From address of the server and a reply-to of the user that triggered the email to be sent. 

2005-06-27 Stuart Prescott <s.prescott@unimelb.edu.au>
	* 0.9.9.0-1.0rc1
